# acestep-trainer

./: .gitignore  .gitmodules  README.md  pyproject.toml
cog/: cog.yaml  predict.py  requirements.txt
cog/.cog/: openapi_schema.json
cog/.cog/tmp/build20260325210915.864628/: requirements.txt
docs/specs/: 2026-03-24-remote-training-pipeline-design.md
scripts/: generate.py  label.py  monitor_jobs.py  patch_torchaudio.py  preprocess.py  submit_job.py  train.py
src/acestep_trainer/: bucket.py  bucket_init.py  cli.py  handler.py  state.py  tui.py
