[project]
name = "acestep-trainer"
version = "0.1.0"
description = "Remote training pipeline for ACE-Step 1.5 on HuggingFace"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "huggingface-hub>=0.30.0",
    "loguru>=0.7.3",
    "textual>=8.1.1",
    "typer-slim>=0.21.1",
]

[project.scripts]
acestep-train = "acestep_trainer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acestep_trainer"]

[tool.uv]
dev-dependencies = [
    "basedpyright>=1.38.4",
    "ruff>=0.9.0",
]

[tool.ruff]
exclude = ["ace-step-1.5"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.basedpyright]
pythonVersion = "3.11"
extraPaths = ["ace-step-1.5"]
exclude = ["ace-step-1.5"]
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnusedCallResult = false
